<resources>
    <string name="app_name">LABDA</string>
</resources>